src/test/deca/context/invalid/created/literal_indefined.deca
//un literal de type indéfini
{
    hello;
}